<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ListaItem"
    tools:ignore="MergeRootFrame">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fundo_2"
                app:layout_anchor="@id/app_bar"
                app:layout_collapseMode="parallax"
                tools:ignore="NotSibling">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/sdvItemCapa"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:background="@color/colorPrimary"
                    android:theme="@style/PSimageGeral"
                    app:layout_collapseMode="parallax"
                    app:layout_constraintDimensionRatio="H,16:9"
                    tools:ignore="MissingConstraints" />

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/sdvItemAvatar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginBottom="16dp"
                    android:theme="@style/PSstyleAvatar"
                    app:layout_collapseMode="parallax"
                    app:layout_constraintBottom_toBottomOf="@+id/sdvItemCapa"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/sdvItemCapa"
                    app:layout_constraintVertical_chainStyle="packed" />


            </android.support.constraint.ConstraintLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/item_detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <ProgressBar
            android:id="@+id/pgbItemCarregando"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:background="@color/colorTextTitulo"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/fab"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_vertical|start"-->
        <!--android:layout_margin="@dimen/fab_margin"-->
        <!--app:backgroundTint="@android:color/holo_red_dark"-->
        <!--app:layout_anchor="@+id/item_detail_container"-->
        <!--app:layout_anchorGravity="top|end"-->
        <!--app:srcCompat="@android:drawable/stat_notify_chat" />-->

</android.support.design.widget.CoordinatorLayout>