<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings1"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:orderInCategory="3"
        android:title="@string/action_menu_item_lista_01"
        app:showAsAction="always"/>
</menu>