...
                <!--app:layout_constraintBottom_toTopOf="@+id/pgbItemLista"-->
                <!--app:layout_constraintEnd_toEndOf="parent"-->
                <!--app:layout_constraintStart_toStartOf="parent"-->
                <!--app:layout_constraintTop_toTopOf="parent" />-->

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcvItemListaPrincipal"
                android:name="marvelcomicsheroes.com.ItemListFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
...
